Ajout du code existant